--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="A4"> 
-    <div class="container">
+  <div class="A4">
+    <div class="content">
       <div class="title">xxxx医院体温单</div>
       <div class="head-form">
         <div class="item">
@@ -37,75 +37,70 @@
           <div class="value">2021-12-01</div>
         </div>
       </div>
-      <table border="1" cellpadding="0" cellspacing="0" border-collapse="collapse">
-        <tr>
-          <td>日期</td>
-          <td colspan="6">2021-12-01</td>
-          <td colspan="6">2021-12-02</td>
-          <td colspan="6">2021-12-03</td>
-          <td colspan="6">2021-12-04</td>
-          <td colspan="6">2021-12-05</td>
-          <td colspan="6">2021-12-06</td>
-          <td colspan="6">2021-12-07</td>
-        </tr>
-        <tr>
-          <td>住院日数</td>
-          <td colspan="6">1</td>
-          <td colspan="6">2</td>
-          <td colspan="6">3</td>
-          <td colspan="6">4</td>
-          <td colspan="6">5</td>
-          <td colspan="6">6</td>
-          <td colspan="6">7</td>
-        </tr>
-        <tr>
-          <td>手术或产后日数</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6">Ⅱ-0</td>
-          <td colspan="6">Ⅱ-1</td>
-          <td colspan="6">Ⅳ-0</td>
-          <td colspan="6">Ⅳ-1</td>
-        </tr>
-        <tr>
-          <td rowspan="2">时间</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-          <td colspan="3">上午</td>
-          <td colspan="3">下午</td>
-        </tr>
-        <tr class="clock-row">
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-          <td>4</td><td>8</td><td>12</td>
-          <td>16</td><td>20</td><td>24</td>
-        </tr>
-        <tr class="main-row">
-          <td class="y-axis">
+      <div class="table">
+        <div class="row">
+          <div class="label cell">日期</div>
+          <div class="values">
+            <div class="cell">2021-12-01</div>
+            <div class="cell">2021-12-02</div>
+            <div class="cell">2021-12-03</div>
+            <div class="cell">2021-12-04</div>
+            <div class="cell">2021-12-05</div>
+            <div class="cell">2021-12-06</div>
+            <div class="cell">2021-12-07</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">住院日数</div>
+          <div class="values">
+            <div class="cell">1</div>
+            <div class="cell">2</div>
+            <div class="cell">3</div>
+            <div class="cell">4</div>
+            <div class="cell">5</div>
+            <div class="cell">6</div>
+            <div class="cell">7</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">手术或产后日数</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell">Ⅱ-0</div>
+            <div class="cell">Ⅱ-1</div>
+            <div class="cell">Ⅳ-0</div>
+            <div class="cell">Ⅳ-1</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">时间</div>
+          <div class="values x-axis">
+            <div class="up">
+              <div>上午</div><div>下午</div>
+              <div>上午</div><div>下午</div>
+              <div>上午</div><div>下午</div>
+              <div>上午</div><div>下午</div>
+              <div>上午</div><div>下午</div>
+              <div>上午</div><div>下午</div>
+              <div>上午</div><div>下午</div>
+            </div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell y-axis">
             <div class="icons">
-              <div class="icon">
-                <label>口表</label>
+              <div class="icon">口表
                 <svg width="10" height="10">
                   <circle r="5" cx="5" cy="5" />
                 </svg>
@@ -163,169 +158,124 @@
                 <div>35</div>
               </div>
             </div>
-          </td>
-          <td colspan="42" class="svg-container">
+          </div>
+          <div class="values" style="position: relative;">
+            <svg id="svg" width="630" height="600" xmlns="http://www.w3.org/2000/svg"></svg>
             <div id="tooltip"></div>
-            <svg id="svg" height="720" width="100%" xmlns="http://www.w3.org/2000/svg"></svg>
-          </td>
-        </tr>
-        <tr>
-          <td>呼吸</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>血压</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>总入液量</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>大便（次）</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>尿液（ml）</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>其它排出量</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>体重（kg）</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>皮试</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-        <tr>
-          <td>其它</td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-          <td colspan="6"></td>
-        </tr>
-      </table>  
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">呼吸</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">血压</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">总入液量</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">大便（次）</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">尿量（ml）</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">其它排出量</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">体重（kg）</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">皮试</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">其它</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+      </div>
       <div class="pagination">第 1 页</div>
     </div>
   </div>
   <script src="./drawSvg.js"></script>
-  <!-- <script>
-    const A4new = document.getElementById('A4new')
-    const originData = { // 数据
-      title: 'xxxx医院体温单',
-      baseInfo: [
-        { label: '姓名', value: '张三' },
-        { label: '年龄', value: '25' },
-        { label: '科别', value: '骨科' },
-        { label: '床号', value: '001' },
-        { label: '住院病历号', value: '123456' },
-        { label: '入院日期', value: '2021-12-01 00:00:00' }
-      ],
-      mouthTemperature: [
-        ['2021-12-01 04:00:01',36.2],
-        ['2021-12-02 00:00:00',36.5],
-        ['2021-12-03 12:00:00',36.3],
-        ['2021-12-04 16:00:00',37.1],
-        ['2021-12-05 20:00:00',37],
-        ['2021-12-06 23:59:59',37.2],
-        ['2021-12-07 24:00:00',36.9]
-      ],
-      armpitTemperature: [
-        ['2021-12-01 16:00:00',39.2],
-        ['2021-12-02 16:00:00',39],
-        ['2021-12-03 16:00:00',38.8],
-        ['2021-12-04 16:00:00',38.6],
-        ['2021-12-05 16:00:00',38.4],
-        ['2021-12-06 16:00:00',38.2],
-        ['2021-12-07 16:00:00',38]
-      ],
-      anusTemperature: [
-        ['2021-12-01 04:00:00',37.1],
-        ['2021-12-02 08:00:00',37.4],
-        ['2021-12-03 12:00:00',37.3],
-        ['2021-12-04 16:00:00',38.2],
-        ['2021-12-05 20:00:00',38.4],
-        ['2021-12-06 24:00:00',38.1],
-        ['2021-12-07 16:00:00',38.4]
-      ],
-      pulseFrequency: [
-        ['2021-12-01 08:00:00',150],
-        ['2021-12-02 08:00:00',130],
-        ['2021-12-03 08:00:00',124],
-        ['2021-12-04 08:00:00',124],
-        ['2021-12-05 08:00:00',130],
-        ['2021-12-06 08:00:00',138],
-        ['2021-12-07 08:00:00',160]
-      ],
-      heartFrequency: [
-        ['2021-12-01 08:00:00',140],
-        ['2021-12-02 08:00:00',150],
-        ['2021-12-03 08:00:00',140],
-        ['2021-12-04 08:00:00',130],
-        ['2021-12-05 08:00:00',130],
-        ['2021-12-06 08:00:00',138],
-        ['2021-12-07 08:00:00',160]
-      ],
-      moreData: [],
-      pagination: 1
-    }
-    let a = new TemperatureChart(A4new, originData)
-    a.update('update')
-  </script> -->
 </body>
 </html>
