modify:foot table

--- a/index.html
+++ b/index.html
@@ -165,7 +165,73 @@
           </div>
         </div>
         <div class="row">
-          <div class="label cell">呼吸</div>
+          <div class="label cell">呼吸(次/分)</div>
+          <div class="values">
+            <div class="min-cell"><div class="top">20</div></div>
+            <div class="min-cell"><div class="bottom">30</div></div>
+            <div class="min-cell"><div class="bottom">30</div></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+            <div class="min-cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">血压(mmHg)</div>
+          <div class="values">
+            <div class="half-cell">138/87</div>
+            <div class="half-cell">139/89</div>
+            <div class="half-cell">139/89</div>
+            <div class="half-cell">139/89</div>
+            <div class="half-cell">138/87</div>
+            <div class="half-cell"></div>
+            <div class="half-cell"></div>
+            <div class="half-cell"></div>
+            <div class="half-cell">138/87</div>
+            <div class="half-cell"></div>
+            <div class="half-cell"></div>
+            <div class="half-cell"></div>
+            <div class="half-cell"></div>
+            <div class="half-cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">总入液量(ml)</div>
           <div class="values">
             <div class="cell"></div>
             <div class="cell"></div>
@@ -177,7 +243,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="label cell">血压</div>
+          <div class="label cell">大便(次)</div>
           <div class="values">
             <div class="cell"></div>
             <div class="cell"></div>
@@ -189,31 +255,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="label cell">总入液量</div>
-          <div class="values">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="label cell">大便（次）</div>
-          <div class="values">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="label cell">尿量（ml）</div>
+          <div class="label cell">尿量(ml)</div>
           <div class="values">
             <div class="cell"></div>
             <div class="cell"></div>
@@ -237,7 +279,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="label cell">体重（kg）</div>
+          <div class="label cell">体重(kg)</div>
           <div class="values">
             <div class="cell"></div>
             <div class="cell"></div>
@@ -258,6 +300,32 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">血糖(mmol/L)</div>
+          <div class="values">
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
+            <div class="one-third-cell"></div>
           </div>
         </div>
         <div class="row">
