--- a/index.html
+++ b/index.html
@@ -344,6 +344,13 @@
       <div class="pagination">第 1 页</div>
     </div>
   </div>
+  <svg xmlns="http://www.w3.org/2000/svg"
+     width="100px" height="30px" viewBox="0 0 1000 300">
+    <text x="250" y="150"
+        font-size="55">
+      Hello, out there
+    </text>
+  </svg>
   <script src="./drawSvg.js"></script>
 </body>
 </html>
